--- a/src/main/webapp/views/error/error404.html
+++ b/src/main/webapp/views/error/error404.html
@@ -8,7 +8,7 @@
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <html>
 <head>
-    <title>Title</title>
+    <title>존재하지않는 페이지-환승주인</title>
 </head>
 <body>
 
